// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigationbar normal 1`] = `
<nav
  className="navbar"
>
  <div
    className="navbar-brand"
  >
    <a
      className="navbar-item"
    >
      <img
        height={28}
        src="https://versions.bulma.io/0.7.2/images/bulma-logo.png"
        width={112}
      />
    </a>
  </div>
  <div
    className="navbar-menu"
  >
    <div
      className="navbar-start"
    >
      <a
        className="navbar-item "
      >
        Home
      </a>
      <a
        className="navbar-item "
      >
        Documentation
      </a>
      <div
        className="navbar-item has-dropdown is-hoverable"
      >
        <a
          className="navbar-link"
        >
          More
        </a>
        <div
          className="navbar-dropdown"
        >
          <a
            className="navbar-item is-active"
            onClick={[Function]}
          >
            About
          </a>
          <a
            className="navbar-item "
          >
            Jobs
          </a>
          <a
            className="navbar-item "
          >
            Contact
          </a>
          <a
            className="navbar-item "
          >
            Report a issue
          </a>
        </div>
      </div>
    </div>
    <div
      className="navbar-end"
    >
      <a
        className="navbar-item "
      >
        <button
          className="button is-info"
          disabled={false}
        />
      </a>
      <a
        className="navbar-item "
      >
        <button
          className="button is-primary"
          disabled={false}
        />
      </a>
    </div>
  </div>
</nav>
`;

exports[`navigationbar primary 1`] = `
<nav
  className="navbar is-primary"
>
  <div
    className="navbar-brand"
  >
    <a
      className="navbar-item"
    >
      <img
        height={28}
        src="https://versions.bulma.io/0.7.2/images/bulma-logo.png"
        width={112}
      />
    </a>
  </div>
  <div
    className="navbar-menu"
  >
    <div
      className="navbar-start"
    >
      <a
        className="navbar-item "
      >
        Home
      </a>
      <a
        className="navbar-item "
      >
        Documentation
      </a>
      <div
        className="navbar-item has-dropdown is-hoverable"
      >
        <a
          className="navbar-link"
          onClick={[Function]}
        >
          About
        </a>
        <div
          className="navbar-dropdown"
        >
          <a
            className="navbar-item "
          >
            Jobs
          </a>
          <a
            className="navbar-item "
          >
            Contact
          </a>
          <a
            className="navbar-item "
          >
            Report a issue
          </a>
        </div>
      </div>
    </div>
    <div
      className="navbar-end"
    >
      <a
        className="navbar-item "
      >
        <button
          className="button is-info"
          disabled={false}
        />
      </a>
      <a
        className="navbar-item "
      >
        <button
          className="button is-primary"
          disabled={false}
        />
      </a>
    </div>
  </div>
</nav>
`;
